erDiagram
    USER ||--o{ MEMBERSHIP : "belongs via"
    ORGANISATION ||--o{ MEMBERSHIP : "has members"
    ORGANISATION ||--o{ PRODUCT : "owns"
    PRODUCT ||--o{ APPLICATION : "certified by"
    USER ||--o{ APPLICATION : "applicant"
    APPLICATION ||--o{ WORKFLOW_TRANSITION : "state history"
    USER |o--o{ WORKFLOW_TRANSITION : "actor"
    APPLICATION ||--o{ WORKFLOW_REVIEW : "reviewed in"
    USER ||--o{ WORKFLOW_REVIEW : "reviewer"
    APPLICATION ||--o{ DECLARATION : "declares"
    DECLARATION ||--|{ DECLARATION_MILESTONE : "claims"
    CATALOG_MILESTONE ||--o{ DECLARATION_MILESTONE : "claimed by"
    DECLARATION ||--o{ DECLARATION_DOCUMENT : "evidence"
    USER ||--o{ DECLARATION_DOCUMENT : "uploaded_by"
    APPLICATION ||--o{ PROVISIONED_RESOURCE : "provisioned in"
    APPLICATION |o--o{ NOTIFICATION_MESSAGE : "about"
    USER |o--o{ NOTIFICATION_MESSAGE : "to"
    USER |o--o{ AUDIT_EVENT : "actor"

    USER {
        uuid external_id UK
        citext email UK
        char name
        char phone
        datetime email_verified_at
        datetime phone_verified_at
        bool is_staff
    }
    ORGANISATION {
        uuid external_id UK
        char name
        slug slug UK
        char kind "ORGANIZATION|INDIVIDUAL"
        char nature_of_entity "Company|Government|LLP|Partnership|Proprietorship|Society|Trust"
        char ownership "GOVERNMENT|PRIVATE"
        char category "13 legacy categories"
        char gst_number "GSTIN, validated"
        bool registered_in_india "null = not asked"
        url website
        char address_fields
        char lgd_state_code
        char lgd_district_code
        char verification_state "PENDING|VERIFIED"
        bigint verified_by FK
        datetime verified_at
    }
    PRODUCT {
        uuid external_id UK
        bigint organisation FK
        char name
        slug slug
        text description
        unique organisation_slug UK
    }
    MEMBERSHIP {
        uuid external_id UK
        bigint organisation FK
        bigint user FK
        char role "OWNER|DEVELOPER"
        unique organisation_user UK
    }
    APPLICATION {
        uuid external_id UK
        char reference UK "SBX-YYYY-NNNNN"
        char kind "SANDBOX|HCX|UHI|HIU|NHCX"
        bigint product FK "org reached through this"
        bigint applicant FK
        char state
        jsonb payload "no org or product facts"
        datetime submitted_at
        unique product_kind UK "live app only"
    }
    WORKFLOW_TRANSITION {
        bigint application FK
        char from_state
        char action
        char to_state
        bigint actor FK "null = system move"
        text comment "only when no review behind it"
        datetime created_date
    }
    WORKFLOW_REVIEW {
        uuid external_id UK
        bigint application FK
        bigint reviewer FK
        int round
        char decision "APPROVE|REJECT|SEND_BACK"
        text comment "single home for the text"
        datetime decided_at
        unique application_reviewer_round UK
    }
    AUDIT_EVENT {
        datetime occurred_at
        bigint actor FK
        char action
        char object_type "FK-free by design"
        uuid object_external_id
        char correlation_id
        jsonb data
    }
    DECLARATION {
        uuid external_id UK
        bigint application FK
        char kind "MILESTONE|EXIT"
        char state "SUBMITTED|APPROVED|REJECTED"
        date started_on
        date completed_on
        jsonb payload
        bigint declared_by FK
    }
    DECLARATION_MILESTONE {
        bigint declaration FK
        bigint milestone FK
        bigint application FK "denormalized for the constraint"
        char kind "denormalized for the constraint"
        bigint superseded_by FK "null = current claim"
        unique application_kind_milestone UK "current claims only"
    }
    DECLARATION_DOCUMENT {
        uuid external_id UK
        bigint declaration FK
        char storage_key "non-derivable"
        char filename
        char content_type "sniffed server-side"
        int size
        char sha256
        bigint uploaded_by FK
    }
    PROVISIONED_RESOURCE {
        uuid external_id UK
        bigint application FK
        char system "KEYCLOAK|WSO2|HIECM"
        char external_ref
        char secret_ref "never a secret value"
        char state "ACTIVE|DISABLED|FAILED|ORPHANED"
        unique application_system UK
    }
    NOTIFICATION_MESSAGE {
        uuid external_id UK
        bigint application FK
        bigint user FK
        char channel "EMAIL|SMS"
        char template_key
        jsonb params "no secrets"
        char state "PENDING|SENT|FAILED"
        int attempts
        text last_error
    }
    CATALOG_MILESTONE {
        uuid external_id UK
        slug key UK
        char title
        char track
        int order
        bool is_active
    }
